mogelijk maken van bepalen van gezag over kind van partner + fix dat derde niet altijd goed wordt gevuld omdat de gezagsrelatie onterecht er uit wordt gefiltered